--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "type": "module",
   "dependencies": {
     "jaxcore-say-node": "^0.0.9",
-    "serialport": "^12.0.0"
+    "node-lame": "^1.3.2",
+    "serialport": "^12.0.0",
+    "sound-play": "^1.1.0",
+    "speaker": "^0.5.4"
   }
 }
