--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "get-audio-duration": "^4.0.1",
     "jaxcore-say-node": "^0.0.9",
     "node-lame": "^1.3.2",
     "serialport": "^12.0.0",
